# grad-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  main.go  main.py  pyproject.toml  requirements.txt  requirements.txt.old_env  run_grad_bot.sh  sample_cards.html  sample_courses.json  sample_gpt.html  sample_itau.json  sample_soup_from_req.html  setup_docker.sh
src/: fetchers.py  helpers.py  main.py
