[project]
name = "grad-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.3.0",
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "exceptiongroup==1.2.0",
    "h11==0.14.0",
    "httpcore==1.0.4",
    "httpx==0.26.0",
    "idna==3.6",
    "python-dotenv==1.0.1",
    "python-telegram-bot==20.8",
    "pytz==2024.1",
    "requests==2.31.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "soupsieve==2.5",
    "typing-extensions==4.10.0",
    "tzlocal==5.2",
    "urllib3==2.2.1",
]
